<resources>
    <string name="app_name">MyDays</string>
    <string name="add_button">Add Button</string>
    <string name="add_hint_title">Title</string>
    <string name="add_hint_body">Write something</string>
    <string name="hind_read_book">Which book are you reading?</string>
    <string name="add_new">Add New</string>
    <string name="mood">Mood</string>
    <string name="save">Save</string>
    <string name="setting_button">Setting button</string>
    <string name="calendar_button">Calendar button</string>
    <string name="enable_setting_theme">Enable</string>
    <string name="disable_setting_theme">Disable</string>

</resources>
