<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardBackgroundColor="?attr/colorTitleBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="156dp"
                android:text="@string/app_name"
                android:textColor="?attr/colorSecondaryText"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="23dp"
                android:layout_marginEnd="30dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/setting_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_calendar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509"
                app:srcCompat="@drawable/ic_icon_ionic_md_more" />

            <ImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:contentDescription="@string/calendar_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_setting"
                app:layout_constraintStart_toEndOf="@+id/tv_title_app"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_icon_awesome_calendar_alt_small" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>
