<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.add.text.AddTextScreen">

    <include
        android:id="@+id/card_header"
        layout="@layout/titlebar" />

    <TextView
        android:id="@+id/tv_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_header"
        tools:text="Add" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931"
        tools:text="Save" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_calendar">


        <EditText
            android:id="@+id/editTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_style"
            android:ems="10"
            android:hint="@string/add_hint_title"
            android:inputType="textCapSentences|textNoSuggestions"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorPrimaryText" />

        <EditText
            android:id="@+id/editBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/et_style"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/add_hint_body"
            android:inputType="textCapSentences|textNoSuggestions|textMultiLine"
            android:maxLines="8"
            android:minLines="8"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/colorPrimaryText" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/colorBackgroundItem"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp">

                <TextView
                    android:id="@+id/tv_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:foregroundGravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/mood"
                    android:textColor="@color/colorPrimaryText" />

                <RadioGroup
                    android:id="@+id/radio_mood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/mood_smile"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/ic_smile"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/mood_confused"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/ic_confused"
                        android:button="@null" />

                    <RadioButton
                        android:id="@+id/mood_sad"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:background="@drawable/ic_sad"
                        android:button="@null" />

                </RadioGroup>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>